<resources>
    <string name="app_name">DNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="View_All">View All</string>
    <string name="Error">Error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="blank" />
    <string name="Add_Category">Add Category</string>
    <string name="Select_Category">Select Category</string>
    <string name="New_Category">New Category</string>
    <string name="New_Category_Message">Please enter name of category and select an icon</string>
    <string name="Add">Add</string>
    <string name="Edit_Category">Edit Category</string>
    <string name="Edit_Category_Message">Please enter new name and icon of category</string>
    <string name="Undo">Undo</string>
    <string name="Confirm">Confirm</string>
    <string name="Delete">Delete</string>
    <string name="Category_Name">Title</string>
    <string name="Category_Description">Description</string>
    <string name="Select_Category_Fragment">Select Category</string>
    <string name="Note_Fragment">Note</string>
    <string name="Title">Title</string>
    <string name="Details">Details</string>
    <string name="Edit">Edit</string>
    <string name="Manage_Category_Fragment">Manage Categories</string>
    <string name="Item_deleted_do_you_want_to_undo">Item deleted. Do you want to undo?</string>
    <string name="Choose_a_color">Choose a color for category</string>
    <string name="fill_the_category_info_and_change_color_and_emoji">Fill the category info and change color and emoji of it.</string>
    <string name="select_a_category_for_edit">Select A Category For Edit</string>
    <string name="default_category_name" >This category is default category</string>
    <string name="default_category_emoji">😀</string>
    <string name="default_category_description" >You can edit but can\'t delete.</string>
    <string name="default_title_all_notes">Category</string>
    <string name="An_error_occurred_please_try_again_later">An error occurred. Please try again later</string>
    <string name="Data_Not_Found">Data can\'t found</string>
    <string name="Note_Data_Not_Found">There is no suitable note</string>
    <string name="undo_unavailable">Undo unavailable</string>
    <string name="Categories">Categories</string>
    <string name="Select">Select</string>
    <string name="Move">Move</string>
    <string name="Unknown_Error">Unknown Error Occurred</string>
    <string name="Unknown_Error_Message">An unknown error occurred. Please try again later.</string>
    <string name="Categories_Could_Not_Be_Loaded">Categories could not be loaded please retry</string>
    <string name="Note_Could_Not_Be_Updated">Note could not be updated</string>
    <string name="Default_Category_Could_Not_Be_Fetch">Default category could not fetch</string>
    <string name="Save_Category_Failed">Category saving failed</string>
    <string name="Error_Title_Empty">Error Title is Empty</string>
    <string name="Error_Title_Cannot_Be_Empty">Error title cannot be empty, please write title</string>
    <string name="Error_Database">Database error</string>
    <string name="Error_While_Inserting_Note">Error ocurred while inserting note</string>
    <string name="Error_While_Updating_Note">Error ocurred while updating note</string>
    <string name="Error_While_Fetching_Note">Error ocurred while fetching note</string>
    <string name="Error_While_Deleting_Note">Error ocurred while deleting note</string>
    <string name="Error_While_Deleting_Category">Error ocurred while deleting category</string>
    <string name="Error_While_Inserting_Category">Error ocurred while inserting category</string>
    <string name="Error_While_Fetching_Category">Error ocurred while fetching categories</string>
    <string name="Error_While_Updating_Category">Error ocurred while updating category</string>
    <string name="Error_There_Is_No_Suitable_Variable">Not Suitable Variable</string>
    <string name="Category_Id_Cannot_Be_Null">Category id is cannot be null</string>
    <string name="Selected_Notes_Could_Not_Be_Deleted">Selected notes could not be deleted</string>
    <string name="Notes_Could_Not_Be_Found_By_Category">There is no notes with this category</string>
    <string name="Wrong_Parameter">Wrong Parameter Error</string>
    <string name="Category_Id_Cannot_Be_Minus_Val">Category Id can\'t be minus value</string>
    <string name="Error_While_Undoing_Category_Deletion">Error occurred while undo category deletion</string>
    <string name="Default_Category_Could_Not_Be_Deleted">Default category could not be deleted</string>
    <string name="Category_Deleting_Error">Category Deleting Error</string>
    <string name="Notes_Could_Not_Be_Empty">Notes could not be empty</string>
    <string name="Error_Note_Info_Is_Empty">Note must have at least title or description</string>
    <string name="Error_Note_Cannot_Be_Saved">Note Couldn\'t Be Saved</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Common_Error_Title">Error</string>
    <string name="Positive_Button_Text">Yes</string>
    <string name="Negative_Button_Text">No</string>
    <string name="Ok_Button_Text">Ok</string>
    <string name="Note_Could_Not_Be_Saved_Would_You_Like_To_Exit">Note couldn\'t be saved. Would you like to exit?</string>
    <string name="Category_Name_And_Description_Could_Not_Be_Empty">Category name and description couldn\'t be empty</string>
    <string name="Not_Valid_Parameters">Not Valid Parameters</string>
    <string name="Category_Name_Could_Not_Be_More_Than_20_Characters">Category name couldn\'t be more than 20 characters</string>
    <string name="Category_Description_Could_Not_Be_More_Than_150_Characters">Category description couldn\'t be more than 150 character</string>
    <string name="Emoji_Is_Not_Valid">This is not an emoji</string>
    <string name="Error_Note_Info_Is_Too_Long"><![CDATA[Error title length must be < 20 and description length must be < 500]]></string>
    <string name="Category_Could_Not_Be_Saved">Category couln\'t be saved</string>
    <string name="Note_Id_Could_Not_Be_Less_Than_Zero">Note id couldn\'t have minus value</string>
    <string name="Delete_Notes">Delete notes</string>
    <string name="Move_Notes">Move notes to another category</string>
    <string name="Cancel_Selection">Cancel selection process</string>
    <string name="Open_Manage_Notes_Menu">Open manage notes menu</string>
    <string name="Select_Emoji">Select emoji</string>
    <string name="Open_Note_Options">Open note options menu</string>
    <string name="Cancel">Cancel</string>
    <string name="Move_Selected_Notes">Move selected notes to another category</string>
    <string name="Delete_Selected_Notes">Delete selected notes</string>
</resources>