<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.duhapp.dnotes.ui.custom_views.ErrorDialogViewModel" />

        <import type="com.duhapp.dnotes.features.base.ui.DialogFragmentState" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_margin">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.uiState.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/Error_Title_Empty" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.uiState.message}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/Unknown_Error_Message" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:onClick="@{() -> viewModel.okButtonClicked()}"
            android:text="@{viewModel.uiState.okButtonText}"
            android:visibility="@{viewModel.uiState.okButtonVisibility}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message"
            tools:text="@string/ok"
            tools:visiblity="gone" />


        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:onClick="@{() -> viewModel.positiveButtonClicked()}"
            android:text="@{viewModel.uiState.positiveButtonText}"
            android:visibility="@{viewModel.uiState.positiveButtonVisibility }"
            app:layout_constraintEnd_toStartOf="@id/no_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message"
            tools:text="@string/Yes" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:onClick="@{() -> viewModel.negativeButtonClicked()}"
            android:text="@{viewModel.uiState.negativeButtonText}"
            android:visibility="@{viewModel.uiState.negativeButtonVisibility }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/yes_button"
            app:layout_constraintTop_toBottomOf="@id/message"
            tools:text="@string/No" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>